@@ -16,6 +16,8 @@ Changes in 4.0.0 RC 1
 
 8)  Restore the 'refresh' command.
 
+9)  Allow ipsec zone in GATEWAY ZONE column of the tunnels file.
+
 Changes in 4.0.0 Beta 6
 
 1)  First step to adding compiler debugging facility.
